--- a/pom.xml
+++ b/pom.xml
@@ -19,44 +19,38 @@
             <artifactId>spring-aspects</artifactId>
             <version>4.3.20.RELEASE</version>
         </dependency>
+        
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>4.3.20.RELEASE</version>
         </dependency>
+        
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
             <version>4.3.20.RELEASE</version>
         </dependency>
+        
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>4.3.20.RELEASE</version>
         </dependency>
+        
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
             <version>4.3.20.RELEASE</version>
         </dependency>
         
-        <!-- commons -->
-        <dependency>
-            <groupId>commons-fileupload</groupId>
-            <artifactId>commons-fileupload</artifactId>
-            <version>1.3.3</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.6</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.7</version>
-        </dependency>
-
+        <!-- cglib -->
+		<dependency>
+		    <groupId>cglib</groupId>
+		    <artifactId>cglib</artifactId>
+		    <version>2.2.2</version>
+		</dependency>
+        
         <!-- aspectJ -->
         <dependency>
             <groupId>org.aspectj</groupId>
@@ -68,6 +62,13 @@
             <artifactId>aspectjrt</artifactId>
             <version>1.9.2</version>
         </dependency>
+        
+        <!--  mysql驱动 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.44</version>
+        </dependency>
 
         <!-- mybatis -->
         <dependency>
@@ -75,6 +76,7 @@
             <artifactId>mybatis</artifactId>
             <version>3.4.6</version>
         </dependency>
+        
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
@@ -86,13 +88,6 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
             <version>1.1.12</version>
-        </dependency>
-
-        <!--  mysql驱动 -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.44</version>
         </dependency>
 
         <!-- jackson -->
@@ -121,14 +116,7 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.2.3</version>
-        </dependency>
-        
-        <!-- cglib -->
-		<dependency>
-		    <groupId>cglib</groupId>
-		    <artifactId>cglib</artifactId>
-		    <version>2.2.2</version>
-		</dependency>
+        </dependency>        
 		
 		<!-- pagehelper -->
 		<dependency>
@@ -150,6 +138,32 @@
 		    <artifactId>fastjson</artifactId>
 		    <version>1.2.52</version>
 		</dependency>
+		
+		<!-- commons -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+        
+		<dependency>
+		    <groupId>commons-codec</groupId>
+		    <artifactId>commons-codec</artifactId>
+		    <version>1.11</version>
+		</dependency>
+        
+        
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
 		
 		<!-- httpcore -->
 		<dependency>
@@ -185,7 +199,6 @@
 		    <artifactId>poi-ooxml-schemas</artifactId>
 		    <version>3.10.1</version>
 		</dependency>
-		
 		
 		
 		<!-- shiro -->  
