--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,20 @@
 		    <version>3.10.1</version>
 		</dependency>
 		
+		<!-- guava -->
+		<dependency>
+		    <groupId>com.google.guava</groupId>
+		    <artifactId>guava</artifactId>
+		    <version>18.0</version>
+		</dependency>
+		
+		<!-- jdom -->
+		<dependency>
+		    <groupId>jdom</groupId>
+		    <artifactId>jdom</artifactId>
+		    <version>1.0</version>
+		</dependency>
+		
 		
 		<!-- shiro -->  
 	    <dependency>  
@@ -249,12 +263,6 @@
 			<version>1.1.0</version>
 		</dependency>
 		
-		<!-- guava -->
-		<dependency>
-		    <groupId>com.google.guava</groupId>
-		    <artifactId>guava</artifactId>
-		    <version>18.0</version>
-		</dependency>
 		
 		
     </dependencies>
