--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -69,6 +69,17 @@
     <filter-name>CorsFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  
+  <!-- 手机端Filter -->
+  <filter>
+	<filter-name>ApiFilter</filter-name>
+	<filter-class>com.py.filter.ApiFilter</filter-class>
+  </filter>
+  <filter-mapping>
+	<filter-name>ApiFilter</filter-name>
+	<url-pattern>/api/*</url-pattern>
+  </filter-mapping>
+   
   <error-page>
     <error-code>400</error-code>
     <location>/WEB-INF/views/error/500.jsp</location>
